--- a/src/almacen/tasks/forms/TasksAlmacenForm.form
+++ b/src/almacen/tasks/forms/TasksAlmacenForm.form
@@ -129,7 +129,8 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/almacen/icons24/search-24.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Busqueda"/>
+            <Property name="mnemonic" type="int" value="98"/>
+            <Property name="toolTipText" type="java.lang.String" value="[Alt+B] Busqueda"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
@@ -146,7 +147,8 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/almacen/icons24/searching-24.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Buscar por folio"/>
+            <Property name="mnemonic" type="int" value="102"/>
+            <Property name="toolTipText" type="java.lang.String" value="[Alt+F] Buscar por folio"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
@@ -163,7 +165,8 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/almacen/icons24/pdf-24.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Reporte por categorias"/>
+            <Property name="mnemonic" type="int" value="112"/>
+            <Property name="toolTipText" type="java.lang.String" value="[Alt+P] Generar PDF"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
@@ -194,7 +197,8 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/almacen/icons24/user-attend-24.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Marcar como atendido"/>
+            <Property name="mnemonic" type="int" value="97"/>
+            <Property name="toolTipText" type="java.lang.String" value="[Alt+A] Marcar como atendido"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
