--- a/src/almacen/deliveryReports/forms/DeliveryReportForm.form
+++ b/src/almacen/deliveryReports/forms/DeliveryReportForm.form
@@ -146,17 +146,22 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jSeparator1" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
-                      <Group type="103" alignment="1" groupAlignment="0" attributes="0">
-                          <Component id="btnSearch" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="btnSearchByFolio" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                          <Component id="btnReport" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="btnAttend" alignment="1" pref="0" max="32767" attributes="0"/>
                       <Component id="jSeparator2" alignment="1" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="jButton1" min="-2" pref="32" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="btnAttend" alignment="0" pref="0" max="32767" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jSeparator1" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
+                              <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                  <Component id="btnSearch" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Component id="btnSearchByFolio" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Component id="btnReport" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
