--- a/src/almacen/index/forms/IndexForm.form
+++ b/src/almacen/index/forms/IndexForm.form
@@ -283,7 +283,7 @@
                         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Eventos"/>
+                        <Property name="text" type="java.lang.String" value="Folios"/>
                       </Properties>
                       <Constraints>
                         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -294,7 +294,7 @@
                     <Component class="javax.swing.JLabel" name="jLabel13">
                       <Properties>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/almacen/icons24/warehouse-24.png"/>
+                          <Image iconType="3" name="/almacen/icons24/folder-24.png"/>
                         </Property>
                       </Properties>
                       <Constraints>
